Resolve issue with album shift on modal
https://app.clickup.com/t/1aquhu7

--- a/src/Components/Common/SingleAlbum/SingleAlbum.scss
+++ b/src/Components/Common/SingleAlbum/SingleAlbum.scss
@@ -59,6 +59,7 @@
 
 }
   .modal-album {
+    position: absolute;
     .modal {
       .holder {
         padding: 10px 15px;
